--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
     "dev:vite": "vite",
     "dev:electron": "wait-on http://localhost:5173 && electron .",
+    "mcp:provider-registry": "node mcp/provider_registry_mcp.js",
+    "mcp:provider-registry:smoke": "node mcp/provider_registry_mcp_smoke.js",
+    "mcp:install-provider-registry:mvp": "node scripts/mcp/install_provider_registry_mvp.js",
     "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:v04 && npm run test:v05",
@@ -24,6 +27,10 @@
     "test:v09:backend": "vitest run --config 自动化测试/V0.9/vitest.backend.config.js",
     "test:v09:integration": "vitest run --config 自动化测试/V0.9/vitest.integration.config.js",
     "test:v09:watch": "vitest --config 自动化测试/V0.9/vitest.integration.config.js",
+    "test:v12": "npm run test:v12:backend && npm run test:v12:integration",
+    "test:v12:backend": "vitest run --config 自动化测试/V0.12/vitest.backend.config.js",
+    "test:v12:integration": "vitest run --config 自动化测试/V0.12/vitest.integration.config.js",
+    "test:v12:watch": "vitest --config 自动化测试/V0.12/vitest.integration.config.js",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
@@ -35,12 +42,14 @@
     "test:e2e:v06": "npm run build && playwright test --config 自动化测试/V0.6/playwright.config.js",
     "test:e2e:v07": "npm run build && playwright test --config 自动化测试/V0.7/playwright.config.js",
     "test:e2e:v09": "npm run build && playwright test --config 自动化测试/V0.9/playwright.config.js",
+    "test:e2e:v12": "npm run build && playwright test --config 自动化测试/V0.12/playwright.config.js",
     "test:v04:all": "npm run test:v04 && npm run test:e2e:v04",
     "test:regression:all": "npm run test:v04:all && npm run test:v05:all",
     "test:v05:all": "npm run test:v05 && npm run test:e2e:v05",
     "test:v06:all": "npm run test:v06 && npm run test:e2e:v06",
     "test:v07:all": "npm run test:v07 && npm run test:e2e:v07",
-    "test:v09:all": "npm run test:v09 && npm run test:e2e:v09"
+    "test:v09:all": "npm run test:v09 && npm run test:e2e:v09",
+    "test:v12:all": "npm run test:v12 && npm run test:e2e:v12"
   },
   "keywords": [
     "electron",
@@ -50,6 +59,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "dotenv": "^17.3.1",
     "electron-store": "^11.0.2",
     "react": "^19.2.4",
