fix: 排除 CI 不存在的符号链接文件

--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
       "electron/**/*",
       "templates/**/*",
       "mcp/**/*",
-      "!**/*.map"
+      "!**/*.map",
+      "!.provider-manifests.json",
+      "!.provider-manifests.json.bak.*"
     ],
     "directories": {
       "output": "release"
