--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,11 @@ jobs:
 
       - run: npm ci
 
+      - name: Remove dangling symlinks
+        run: |
+          rm -f .provider-manifests.json
+          rm -f .provider-manifests.json.bak.*
+
       - run: npm run dist
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
